[gd_scene load_steps=26 format=3 uid="uid://4vffckmaesf3"]

[ext_resource type="Script" path="res://Scenes/Entity/entity.gd" id="1_8nwyy"]
[ext_resource type="Texture2D" uid="uid://bi7ornrkd1mal" path="res://Photos/Entities/Entities.png" id="2_jndi3"]
[ext_resource type="Texture2D" uid="uid://b34xtclrtfqxr" path="res://graphics/lights/textures/circle.png" id="3_1qjxs"]

[sub_resource type="Curve" id="Curve_qnl12"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, -62.069), 0.0, 4.59769, 0, 1, Vector2(1, -57.4713), 4.59769, 0.0, 1, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_m7uuk"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.822581, 0.689655), -1.30651, -1.30651, 0, 0, Vector2(1, 0.425287), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_apu06"]
offsets = PackedFloat32Array(0.0174216, 0.491289, 1)
colors = PackedColorArray(0.98662, 0.925927, 1.54018e-06, 1, 0.974957, 0.87674, 0.0464756, 1, 0.76735, 0.00120693, 0.873713, 1)

[sub_resource type="Curve" id="Curve_6g5m8"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xbx6l"]
size = Vector2(130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_r635k"]
atlas = ExtResource("2_jndi3")
region = Rect2(0, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_qla7u"]
atlas = ExtResource("2_jndi3")
region = Rect2(130, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uara"]
atlas = ExtResource("2_jndi3")
region = Rect2(650, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ae75"]
atlas = ExtResource("2_jndi3")
region = Rect2(260, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5b7u"]
atlas = ExtResource("2_jndi3")
region = Rect2(390, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_dc5vs"]
atlas = ExtResource("2_jndi3")
region = Rect2(520, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6uth"]
atlas = ExtResource("2_jndi3")
region = Rect2(780, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikqlf"]
atlas = ExtResource("2_jndi3")
region = Rect2(910, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgcwa"]
atlas = ExtResource("2_jndi3")
region = Rect2(1040, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcnsf"]
atlas = ExtResource("2_jndi3")
region = Rect2(1170, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojg2d"]
atlas = ExtResource("2_jndi3")
region = Rect2(1300, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_amv3o"]
atlas = ExtResource("2_jndi3")
region = Rect2(1430, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_32qut"]
atlas = ExtResource("2_jndi3")
region = Rect2(1560, 0, 130, 130)

[sub_resource type="SpriteFrames" id="SpriteFrames_22j0d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r635k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qla7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uara")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ae75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5b7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dc5vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6uth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikqlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgcwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcnsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojg2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amv3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32qut")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_tfdgv"]
resource_name = "bobik_fade"
length = 0.8
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BobikAttributes/PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 0.392292),
"update": 0,
"values": [15.28, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_sb45w"]
resource_name = "normal_fade"
length = 0.8
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2swbw"]
_data = {
"bobik_fade": SubResource("Animation_tfdgv"),
"normal_fade": SubResource("Animation_sb45w")
}

[node name="Entity" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_8nwyy")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 1.1
one_shot = true
preprocess = 0.3
explosiveness = 1.0
lifetime_randomness = 0.44
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 175.81
initial_velocity_max = 323.59
angular_velocity_min = -149.15
angular_velocity_max = 149.61
linear_accel_min = 3.0
linear_accel_max = 8.99
linear_accel_curve = SubResource("Curve_qnl12")
angle_max = 8.5
scale_amount_min = 4.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_m7uuk")
color_ramp = SubResource("Gradient_apu06")
hue_variation_curve = SubResource("Curve_6g5m8")

[node name="BobikAttributes" type="Node2D" parent="."]
visible = false

[node name="PointLight2D" type="PointLight2D" parent="BobikAttributes"]
color = Color(1, 1, 0.239216, 1)
energy = 15.28
texture = ExtResource("3_1qjxs")
texture_scale = 0.4

[node name="ColorRect" type="ColorRect" parent="BobikAttributes"]
offset_left = -68.0
offset_top = -68.0
offset_right = 68.0
offset_bottom = 68.0
color = Color(1, 1, 0.231373, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xbx6l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 2
sprite_frames = SubResource("SpriteFrames_22j0d")
frame = 7
frame_progress = 0.627533

[node name="DodgeTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_2swbw")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
